# shtola

./: .drone.yml  .gitignore  Cargo.toml  LICENSE  oranda.json
fixtures/frontmatter/: hello.md
fixtures/markdown/: hello.md
fixtures/markdown/dest/: hello.html
shtola/: Cargo.toml  README.md
shtola-markdown/: Cargo.toml
shtola-markdown/examples/: markdown.rs
shtola-markdown/src/: lib.rs
shtola/examples/: simple.rs
shtola/src/: frontmatter.rs  lib.rs  tests.rs
ware/: Cargo.toml  LICENSE  README.md
ware/src/: lib.rs
